src/objects/LeanData__LD_Partner_Log__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Logs</relationshipLabel>
        <relationshipName>Partner_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Action_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Callout_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Callout Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Callout_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Callout Duration (MS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Callout_History__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Callout History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Callout_Priority__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Callout Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Callout_Status__c</fullName>
        <defaultValue>&quot;PENDING&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Callout Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Logs</relationshipLabel>
        <relationshipName>Partner_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Endpoint_Suffix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Error_Responses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Responses</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Header__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Header</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>LeanData__LD_Partner__c</referenceTo>
        <relationshipLabel>Partner Logs</relationshipLabel>
        <relationshipName>Partner_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Partner Logs</relationshipLabel>
        <relationshipName>Partner_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log</label>
        <referenceTo>LeanData__Log__c</referenceTo>
        <relationshipLabel>Partner Logs</relationshipLabel>
        <relationshipName>Partner_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Node_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Node Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Logs</relationshipLabel>
        <relationshipName>Partner_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Parent_Callout_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Parent Callout Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Partner_Name__c</fullName>
        <formula>LeanData__LD_Partner__r.Name</formula>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Processing_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Processing Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Processing_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Processing Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Request_Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Response_Status_Code__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Response Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Response_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Success Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Target_Object_Id__c</fullName>
        <formula>IF(LeanData__Target_Object_Type__c == &quot;Lead&quot;, LeanData__Lead__c,
          IF(LeanData__Target_Object_Type__c == &quot;Contact&quot;, LeanData__Contact__c,
          IF(LeanData__Target_Object_Type__c == &quot;Account&quot;, LeanData__Account__c, LeanData__Opportunity__c)))</formula>
        <label>Target Object Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Target_Object_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Target_Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Total_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Duration (MS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LD Partner Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LD Partner Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LD Partner Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>